--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,7 +3,7 @@
 	{{burger_name}}
 	{{else}}
 	{{burger_name}}
-	<form action="/api/burgers/{{id}}" method="POST">
+	<form action="/api/burgers/{{id}}?_method=PUT" method="POST">
 		<button class="" data-id="{{id}}" type="submit">
 			{{#if devoured}}ALREADY EATEN{{else}}CONSUME {{/if}}
 		</button>
